10-longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.crt.house
  labels:
    app: longhorn-ingress
  name: longhorn-ingress
  namespace: longhorn
spec:
  ingressClassName: nginx-crt-house
  rules:
  - host: longhorn.crt.house
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - longhorn.crt.house
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.40
